jvmLExp.output
Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: "start" T_id $@1 stmts "end"

    3 stmts: '(' stmt ')' stmts
    4      | ε

    5 stmt: printcmd
    6     | asmt

    7 printcmd: "print" expr

    8 asmt: '=' T_id expr

    9 expr: T_num
   10     | T_real
   11     | T_id
   12     | T_type expr
   13     | '+' expr expr
   14     | '*' expr expr
   15     | "+." expr expr
   16     | "*." expr expr
   17     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 17
    ')' (41) 3 17
    '*' (42) 14
    '+' (43) 13
    '=' (61) 8
    error (256)
    "start" (258) 2
    "end" (259) 2
    "print" (260) 7
    T_type <tokentype> (261) 12
    "+." (262) 15
    "*." (263) 16
    T_id <lexical> (264) 2 8 11
    T_num <lexical> (265) 9
    T_real <lexical> (266) 10


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    program (18)
        on left: 2
        on right: 0
    $@1 (19)
        on left: 1
        on right: 2
    stmts (20)
        on left: 3 4
        on right: 2 3
    stmt (21)
        on left: 5 6
        on right: 3
    printcmd (22)
        on left: 7
        on right: 5
    asmt (23)
        on left: 8
        on right: 6
    expr <tokentype> (24)
        on left: 9 10 11 12 13 14 15 16 17
        on right: 7 8 12 13 14 15 16 17


State 0

    0 $accept: • program $end

    "start"  shift, and go to state 1

    program  go to state 2


State 1

    2 program: "start" • T_id $@1 stmts "end"

    T_id  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    2 program: "start" T_id • $@1 stmts "end"

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    2 program: "start" T_id $@1 • stmts "end"

    '('  shift, and go to state 6

    $default  reduce using rule 4 (stmts)

    stmts  go to state 7


State 6

    3 stmts: '(' • stmt ')' stmts

    "print"  shift, and go to state 8
    '='      shift, and go to state 9

    stmt      go to state 10
    printcmd  go to state 11
    asmt      go to state 12


State 7

    2 program: "start" T_id $@1 stmts • "end"

    "end"  shift, and go to state 13


State 8

    7 printcmd: "print" • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 23


State 9

    8 asmt: '=' • T_id expr

    T_id  shift, and go to state 24


State 10

    3 stmts: '(' stmt • ')' stmts

    ')'  shift, and go to state 25


State 11

    5 stmt: printcmd •

    $default  reduce using rule 5 (stmt)


State 12

    6 stmt: asmt •

    $default  reduce using rule 6 (stmt)


State 13

    2 program: "start" T_id $@1 stmts "end" •

    $default  reduce using rule 2 (program)


State 14

   12 expr: T_type • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 26


State 15

   17 expr: '(' • expr ')'

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 27


State 16

   13 expr: '+' • expr expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 28


State 17

   14 expr: '*' • expr expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 29


State 18

   15 expr: "+." • expr expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 30


State 19

   16 expr: "*." • expr expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 31


State 20

   11 expr: T_id •

    $default  reduce using rule 11 (expr)


State 21

    9 expr: T_num •

    $default  reduce using rule 9 (expr)


State 22

   10 expr: T_real •

    $default  reduce using rule 10 (expr)


State 23

    7 printcmd: "print" expr •

    $default  reduce using rule 7 (printcmd)


State 24

    8 asmt: '=' T_id • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 32


State 25

    3 stmts: '(' stmt ')' • stmts

    '('  shift, and go to state 6

    $default  reduce using rule 4 (stmts)

    stmts  go to state 33


State 26

   12 expr: T_type expr •

    $default  reduce using rule 12 (expr)


State 27

   17 expr: '(' expr • ')'

    ')'  shift, and go to state 34


State 28

   13 expr: '+' expr • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 35


State 29

   14 expr: '*' expr • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 36


State 30

   15 expr: "+." expr • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 37


State 31

   16 expr: "*." expr • expr

    T_type  shift, and go to state 14
    '('     shift, and go to state 15
    '+'     shift, and go to state 16
    '*'     shift, and go to state 17
    "+."    shift, and go to state 18
    "*."    shift, and go to state 19
    T_id    shift, and go to state 20
    T_num   shift, and go to state 21
    T_real  shift, and go to state 22

    expr  go to state 38


State 32

    8 asmt: '=' T_id expr •

    $default  reduce using rule 8 (asmt)


State 33

    3 stmts: '(' stmt ')' stmts •

    $default  reduce using rule 3 (stmts)


State 34

   17 expr: '(' expr ')' •

    $default  reduce using rule 17 (expr)


State 35

   13 expr: '+' expr expr •

    $default  reduce using rule 13 (expr)


State 36

   14 expr: '*' expr expr •

    $default  reduce using rule 14 (expr)


State 37

   15 expr: "+." expr expr •

    $default  reduce using rule 15 (expr)


State 38

   16 expr: "*." expr expr •

    $default  reduce using rule 16 (expr)
